Ready for staging site

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -15,6 +15,7 @@
 @import "partials/home";
 @import "partials/pages";
 @import "partials/blocks";
+@import "partials/input";
 @import "../src/sass/understrap/theme/contact-form7";    // <------- Loads some basic styling for contact form 7 plugin
 
 
