--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -16,6 +16,7 @@
 @import "partials/pages";
 @import "partials/blocks";
 @import "partials/input";
+@import "partials/subsidiary";
 @import "../src/sass/understrap/theme/contact-form7";    // <------- Loads some basic styling for contact form 7 plugin
 
 
