--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -380,7 +380,7 @@
 
 /* Atchive Locations Styles */
 
-.map-wrap {
+.map-wrapper {
     padding: 0;
     .acf-map {
     	width: 100%;
@@ -394,25 +394,61 @@
     }
 }
 
-.single-location {
-    color: $primary;
-    padding-left: 0;
-    list-style: none;
-    margin-bottom: 50px;
+.location-list {
+    li {
+        list-style-type: none;
+    }
+    .single-location {
+        color: $primary;
+        padding-left: 0;
+        list-style: none;
+        margin-bottom: 50px;
 
-    .location-logo {
-        margin-bottom: 10px;
+        .location-logo {
+            margin-bottom: 10px;
+        }
+
+        li {
+            &:last-child {
+                margin-top: 20px;
+                text-decoration: underline;
+                font-weight: 500;
+            }
+        }
     }
 
-    li {
-        &:last-child {
-            margin-top: 20px;
-            text-decoration: underline;
-            font-weight: 500;
+    .marker {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 25%;
+        max-width: 25%;
+        position: relative;
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        color: $primary;
+        margin-bottom: 50px;
+
+        .location-logo {
+            margin-bottom: 10px;
         }
     }
 }
 
+.location-filter {
+    .searchandfilter {
+        label {
+            width: 100%;
+        }
+
+        select {
+            background-color: $primary-light;
+            padding: 10px;
+            border: 2px solid $primary;
+            color: $primary;
+        }
+    }
+}
 #search-filter-form-5438 ul {
     padding-left: 0;
 }
