--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -32,6 +32,7 @@ body {
     .header-logo {
         padding: 15px 15px 15px 0;
         transition: all .2s ease;
+        min-height: 143px;
 
         @include media-breakpoint-down(sm) {
             padding: 10px 15px 10px 0;
