a bunch of fixes and locations work now...maybe

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -52,6 +52,8 @@
         height: calc(100% - 144px);
         text-align: center;
         width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
     }
 }
 
