QA has starter, header menu fixed, HP is good

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -17,6 +17,7 @@
 @import "partials/blocks";
 @import "partials/input";
 @import "partials/subsidiary";
+@import "partials/mobile";
 @import "../src/sass/understrap/theme/contact-form7";    // <------- Loads some basic styling for contact form 7 plugin
 
 
