--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -4,6 +4,9 @@
     background-color: $primary;
     text-align: center;
     padding: 0;
+    .row {
+        margin: 0;
+    }
 
     ul {
         padding-left: 0;
@@ -144,6 +147,10 @@
     color: $primary;
     padding: 30px 0;
     text-align:center;
+
+    .row {
+        width: 100%;
+    }
 
     a {
         color: inherit;
