--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -2,7 +2,8 @@ body {
     font-size: 16px;
 }
 .header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     width: 100%;
     background-color: #FFF;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
