--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -3,7 +3,6 @@
 .page-header {
     position: relative;
     padding: 0;
-    padding-top: 120px;
     background-color: $primary;
     box-sizing: content-box;
 
@@ -63,7 +62,7 @@
     position: relative;
     padding: 143px 0 0;
     box-sizing: initial;
-    max-height: 100px;
+    max-height: 120px;
 
     img {
         width: 100%;
@@ -88,15 +87,13 @@
 .no-banner {
     width: 100%;
     display: block;
-    height: 143px;
+    height: 20px;
     background-color: $primary;
 }
 
 .main-content {
     padding-bottom: 70px;
     .row {
-        margin: 40px auto;
-
         &:last-child {
             margin-bottom: 0;
         }
@@ -389,7 +386,6 @@
     .acf-map {
     	width: 100%;
     	height: 60vh;
-
     }
 
     /* fixes potential theme css conflict */
@@ -399,6 +395,7 @@
 }
 
 .location-list {
+    padding-left: 15px;
     li {
         list-style-type: none;
     }
@@ -563,7 +560,7 @@
     }
 
     h5 {
-        line-height: 1.2;
+        line-height: 1.6;
     }
 }
 
@@ -688,6 +685,37 @@
             margin-top: 0;
             font-weight: normal;
             text-decoration: none;
+        }
+    }
+}
+
+.page-template-page-contact {
+    .service-area-title {
+        margin: 30px 0 20px 0;
+        font-weight: normal;
+    }
+    .gform_body {
+        li {
+            list-style: none;
+        }
+
+        .gform_fields {
+            padding-left: 0;
+        }
+    }
+
+    .contact-page-map {
+        .acf-map {
+        	width: 100%;
+        	height: 400px;
+            margin-bottom: 30px;
+        }
+
+        .single-location {
+            float: left;
+            li {
+                list-style: none;
+            }
         }
     }
 }
