--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -466,4 +466,11 @@
     h4 {
         margin-bottom: 30px;
     }
+
+    .cert-wrap {
+        img {
+            max-height: 130px;
+            margin-right: 30px;
+        }
+    }
 }
