--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -278,7 +278,7 @@
     }
 }
 
-.home-featured-projects {
+.home-featured-projects, .related-projects  {
     padding: 40px 0;
     h2.title {
         text-align:center;
