--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -85,6 +85,11 @@
     box-sizing: initial;
     max-height: 120px;
 
+    &.solid-header {
+        background-color: $primary;
+        height: 82px;
+    }
+
     img {
         width: 100%;
         max-height: 120px;
@@ -230,6 +235,10 @@
 //     transform: rotate(180deg);
 // }
 
+.service-accordion {
+    clear:left;
+    margin-top: 15px;
+}
 .card {
     border: none;
 
@@ -299,11 +308,18 @@
 
 .expand-btn {
     text-align: right;
-    width: 100%;
+    width: 50%;
+    float: left;
     color: $primary;
     display: block;
-    margin: 10px 0;
+    margin: 10px 0 20px;
     cursor: pointer;
+}
+
+.service-search {
+    float: left;
+    width: 48%;
+    margin-right: 2%;
 }
 
 /* Service Single Styles */
@@ -521,6 +537,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
             }
             & > li {
                 list-style-type: none;
+                margin-bottom: 5px;
 
                 &:before {
                     content: none;
@@ -575,6 +592,23 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
             .thumb-overlay {
                 opacity: 1;
                 transition: opacity .2s ease;
+            }
+        }
+    }
+}
+
+.blog {
+    .pagination {
+        .page-item {
+            &.active {
+                .page-link {
+                    border:none;
+                    border-radius: 2px;
+                }
+            }
+
+            .page-link {
+                border:none!important;
             }
         }
     }
@@ -690,6 +724,12 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
                 opacity: 0;
             }
         }
+    }
+}
+
+.single-project_gallery {
+    .related-projects {
+        margin-top: 40px;
     }
 }
 /* General Page Styles */
