--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -472,5 +472,11 @@
             max-height: 130px;
             margin-right: 30px;
         }
+
+        p {
+            font-size: 20px;
+            font-weight: bold;
+            color: $primary;
+        }
     }
 }
