--- a/sass/partials/_subsidiary.scss
+++ b/sass/partials/_subsidiary.scss
@@ -1,4 +1,15 @@
 .page-template-sub-front-page {
+
+    .home-intro {
+        .home-intro-right {
+            img {
+                width: 100%;
+            }
+            .slide-caption {
+                padding: 10px;
+            }
+        }
+    }
     .home-major-points {
         .point {
             .livicon-evo {
@@ -23,7 +34,7 @@
         }
         .acf-map {
             width: 100%;
-            height: 550px;
+            height: 450px;
             border: #ccc solid 1px;
             margin: 20px 0;
         }
@@ -34,7 +45,17 @@
             line-height: 1.6;
         }
         .full-location-list {
-            .single-location { 
+            .home-location {
+                width: 32%;
+                float:left;
+                margin-right: 2%;
+                margin-bottom: 10px;
+
+                &:nth-child(3n+3) {
+                    margin-right: 0 !important;
+                }
+            }
+            .single-location {
                 list-style-type: none;
                 padding-left: 0;
             }
@@ -48,6 +69,12 @@
                 padding-left: 20px;
                 li {
                     list-style: none;
+                    width: 32%;
+                    margin-right: 2%;
+
+                    &:nth-child(2n+2) {
+                        margin-right: 0;
+                    }
 
                     &:before {
                         content: "-";
