changes to project gallery

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -816,3 +816,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
         }
     }
 }
+
+/* LIterature DOwnload Shorcode Styles */
+.literature-list {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
