--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -136,10 +136,11 @@
 
     .slideshow {
         .swiper-container {
-
+            max-width: 757px; width: 100%;
+            max-height: 450px; height: 100%;
             img {
-                max-width: 757px; width: 100%;
-                max-height: 482px; height: 100%;
+                object-fit: cover;
+                height: 100%;
             }
             .slide-caption {
                 font-weight: lighter;
@@ -148,6 +149,8 @@
                 background-color: $primary-light;
                 color: $primary;
                 font-style: italic;
+                position: absolute;
+                bottom: 0;
             }
             .swiper-button-prev, .swiper-button-next {
                 width: 40px;
