--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -319,7 +319,7 @@
                     opacity: .4;
                 }
 
-                a {
+                span {
                     opacity: 1;
                 }
             }
@@ -332,12 +332,20 @@
 
     .sfp-left {
         transition: all .2s ease;
-        padding: 40px 30px;
         border: 2px solid #E8EEF4;
         box-shadow: 0px 2px 4px rgba(0,0,0,0.18);
         border-radius: 10px 0 0 10px;
         border-right: none;
         color: $light;
+
+        a {
+            display: block;
+            padding: 40px 30px;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
 
         h5 {
             color: $light;
@@ -354,12 +362,13 @@
         position: relative;
         background-color: $primary;
 
-        span {
-            width: 100%;
+        div {
+            width: 100%; height: 100%;
             position: absolute;
+            top: 0;
             text-align: center;
 
-            a {
+            span {
                 color: $primary;
                 background-color: $white;
                 border-radius: 20px;
