--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -305,7 +305,7 @@
                 box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.18);
 
                 p {
-                    color: inherit;
+                    color: $white;  
                 }
 
                 h5 {
