--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -140,7 +140,7 @@
             max-height: 450px; height: 100%;
             img {
                 object-fit: cover;
-                height: 100%;
+                width: 100%; height: 100%;
             }
             .slide-caption {
                 font-weight: lighter;
@@ -196,6 +196,14 @@
                 position: relative;
                 margin: 0 auto;
                 top: -100px;
+            }
+
+            .service-cta {
+                margin-top: 30px;
+
+                .service-cta-content {
+                    color: $primary;
+                }
             }
         }
     }
@@ -861,6 +869,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
 
         .single-location {
             float: left;
+            padding-right: 0;
             li {
                 list-style: none;
             }
