switching to use branch name

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -63,6 +63,7 @@
 
     .footer-social-media {
         padding-left: 0;
+        margin-top: 20px;
         li {
             color: white;
             width: 48px;
