--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -60,9 +60,9 @@
                     border-radius: 18px;
                 }
                 .btn-primary {
-                    background-color: white;
+                    background-color: transparent;
                     border-color: white;
-                    color: $primary;
+                    color: $white;
                 }
 
                 .btn-secondary {
