--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -1,6 +1,6 @@
 .home-page-wrapper {
     padding-top: 0;
-
+    padding-bottom: 0;
     h5 {
         line-height: 1.6;
     }
@@ -262,7 +262,9 @@
         text-align: center;
 
         img {
-            width: 100%;
+            width: auto;
+            max-width: 90%;
+            max-height: 100px;
         }
     }
 }
@@ -444,10 +446,12 @@
     .hc-right {
         .swiper-container {
             max-width: 757px; width: 100%;
-            max-height: 450px; height: 100%;
+            height: 100%;
             img {
                 object-fit: cover;
                 height: 100%;
+                max-height: 450px;
+                width: 100%;
             }
             .slide-caption {
                 font-weight: lighter;
