--- a/sass/partials/_subsidiary.scss
+++ b/sass/partials/_subsidiary.scss
@@ -58,6 +58,10 @@
             .single-location {
                 list-style-type: none;
                 padding-left: 0;
+
+                li:first-child {
+                    font-weight: bold;
+                }
             }
         }
 
