--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -883,6 +883,15 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
         	width: 100%;
         	height: 400px;
             margin-bottom: 30px;
+
+            .single-location {
+                float: left;
+                padding: 0;
+                margin: 0;
+                li {
+                    list-style: none;
+                }
+            }
         }
 
         .single-location {
