--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -140,6 +140,11 @@
             margin-right: 4%;
             //padding: 30px 30px 30px 0;
         }
+
+        .point-content {
+            width: 70%;
+            float: right;
+        }
     }
     .point:not(:hover) {
         opacity: .6;
