--- a/sass/partials/_subsidiary.scss
+++ b/sass/partials/_subsidiary.scss
@@ -50,6 +50,10 @@
             font-weight: normal;
             line-height: 1.6;
         }
+
+        h5 {
+            margin-top: 40px;
+        }
         .full-location-list {
             .home-location {
                 width: 32%;
