updates to ctas

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -969,3 +969,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
     margin-left: 0;
     padding-left: 0;
 }
+
+/* Career page */
+
+
+.career-btn {
+    color: $white!important;
+}
