--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -15,6 +15,21 @@
     background-size: cover;
     background-position: bottom center;
 
+    &:after {
+        content: "";
+        width: 100%;
+        height: 100px;
+        background: rgb(255,255,255);
+        background: -moz-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+        background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
+        position: absolute;
+        bottom: 0;
+        height: 180px;
+        left: 0;
+        max-width: 100%;
+    }
 
     .swiper-container {
         height: 100%;
