updates after ais

--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -26,7 +26,7 @@
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
         position: absolute;
         bottom: 0;
-        height: 180px;
+        height: 100%;
         left: 0;
         max-width: 100%;
     }
