--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -80,9 +80,7 @@
             }
         }
     }
-    p {
-        margin: 0 0 35px 0;;
-    }
+
     .footer-contact-info {
         line-height: 25px;
         strong {
@@ -104,6 +102,7 @@
 
         li {
             margin-bottom: 10px;
+            list-style-type: none;
         }
         a {
             color: white;
