changes after argus contracting

--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -55,6 +55,8 @@
 
     .home-major-points {
         .point {
+            margin-bottom: 0;
+            text-align: center;
             .livicon-evo {
                 margin-top: 12%;
                 margin-bottom: 12%;
