--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -16,19 +16,18 @@
     background-position: bottom center;
 
     &:after {
-        content: "";
-        width: 100%;
-        height: 100px;
-        background: rgb(255,255,255);
-        background: -moz-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-        background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
         position: absolute;
         bottom: 0;
+        content: '';
+        display: block;
+        width: 100%;
         height: 100%;
-        left: 0;
-        max-width: 100%;
+        z-index: 1;
+        background: rgb(0,74,151);
+        background: -moz-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+        background: -webkit-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+        background: linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#004a97",endColorstr="#ffffff",GradientType=1);
     }
 
     .swiper-container {
