updates on partners page

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -766,8 +766,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
     .single-partner {
         img {
             margin-bottom: 30px;
-            max-width: 200px;
-            height: 140px;
+            max-width: 250px;
+            height: auto;
             max-height: 140px;
         }
     }
