--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -185,8 +185,8 @@
                 border: 3px solid $white;
             }
             .swiper-pagination {
-                width: 100%;
-                margin-top: 10px;
+                width: 70%;
+                margin: 0 15% ;
             }
 
             .nav-wrap {
@@ -554,11 +554,14 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
 
         .location-logo {
             margin-bottom: 10px;
+            max-height: 115px;
+            width: auto;
         }
 
         li {
             &:first-child {
                 font-weight: bold;
+                height: 115px;
             }
             &:last-child {
                 margin-top: 20px;
