plural/singular project heading fix, changes sub to comp in theme

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -535,7 +535,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
         }
         .location-logo {
             margin-bottom: 10px;
-            max-width: 200px;
+            max-width: 200px!important;
             max-height: 80px;
         }
     }
