--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -532,6 +532,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
             padding-left: 0;
             padding: 10px;
             margin-bottom: 0;
+            list-style-type: none;
         }
         .location-logo {
             margin-bottom: 10px;
@@ -573,9 +574,9 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
 
     .marker {
         -webkit-box-flex: 0;
-        -ms-flex: 0 0 25%;
-        flex: 0 0 25%;
-        max-width: 25%;
+        -ms-flex: 0 0 33%;
+        flex: 0 0 33%;
+        max-width: 33%;
         position: relative;
         width: 100%;
         padding-right: 15px;
