--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -13,28 +13,29 @@
 
     position: relative;
     background-size: cover;
-    background-position: bottom center;
+    //background-position: bottom center;
 
-    &:after {
-        position: absolute;
-        bottom: 0;
-        content: '';
-        display: block; 
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        background: rgb(0,74,151);
-        background: -moz-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
-        background: -webkit-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
-        background: linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#004a97",endColorstr="#ffffff",GradientType=1);
-    }
+
 
     .swiper-container {
         height: 100%;
 
         .swiper-slide {
             background-size: cover;
+            &:after {
+                position: absolute;
+                bottom: 0;
+                content: '';
+                display: block;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                background: rgb(0,74,151);
+                background: -moz-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+                background: -webkit-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+                background: linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
+                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#004a97",endColorstr="#ffffff",GradientType=1);
+            }
 
             img {
                 width: 100%;
