--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -6,15 +6,7 @@
     }
 }
 
-.home-banner, .home-slider {
-    background-color: $primary;
-    height: 62vh;
-    max-height: 600px;
-
-    position: relative;
-    background-size: cover;
-    //background-position: bottom center;
-
+.home-banner {
     &:after {
         position: absolute;
         bottom: 0;
@@ -28,8 +20,17 @@
         background: -webkit-linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
         background: linear-gradient(0deg, rgba(0,74,151,1) 0%, rgba(255,255,255,0) 65%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#004a97",endColorstr="#ffffff",GradientType=1);
-    } 
+    }
 
+}
+.home-banner, .home-slider {
+    background-color: $primary;
+    height: 62vh;
+    max-height: 600px;
+
+    position: relative;
+    background-size: cover;
+    //background-position: bottom center;
 
     .swiper-container {
         height: 100%;
@@ -303,7 +304,7 @@
 
         img {
             width: auto;
-            max-width: 90%;
+            max-width: 90%; width: 100%;
             max-height: 100px;
         }
     }
@@ -419,6 +420,10 @@
         transition: all .2s ease;
         position: relative;
         background-color: $primary;
+
+        img {
+            width: 100%;
+        }
 
         div {
             width: 100%; height: 100%;
