changes for IE11

--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -304,7 +304,7 @@
 
         img {
             width: auto;
-            max-width: 90%; width: 100%;
+            max-width: 90%;
             max-height: 100px;
         }
     }
