--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -306,6 +306,7 @@
             width: auto;
             max-width: 90%;
             max-height: 100px;
+            width: 100%;
         }
     }
 }
