--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -302,11 +302,13 @@
         margin: 30px 0;
         text-align: center;
 
+        a {
+            width: 100%;
+        }
+
         img {
-            width: auto;
             max-width: 90%;
             max-height: 100px;
-            width: 100%;
         }
     }
 }
