--- a/sass/partials/_blocks.scss
+++ b/sass/partials/_blocks.scss
@@ -6,9 +6,10 @@
         left: 50%;
         padding: 80px 0;
 
-        & + * {
+        &:not(.split-column) + * {
             margin-top: 80px;
         }
+
 
         .row {
             max-width: 1200px; width: 100%;
